--- a/assets/scss/layout/_background-animation.scss
+++ b/assets/scss/layout/_background-animation.scss
@@ -5,10 +5,28 @@
   width: 100vw;
   height: 100vh;
   z-index: -2;
+  pointer-events: none;
 }
 
 .animated-squares {
   display: block;
   width: 100%;
   height: 100%;
+  overflow: visible;
+}
+
+@media (max-width: 768px) {
+  .background-animation {
+    z-index: -1;
+  }
+  
+  .animated-squares {
+    opacity: 1;
+    visibility: visible;
+  }
+}
+
+.animated-squares rect {
+  opacity: 0.1 !important;
+  visibility: visible !important;
 }
